# RayTracing

./: .gitignore  README.md  RayTracing.sln
RayTracing/: CMakeLists.txt  RayTracing.vcxproj  RayTracing.vcxproj.filters
RayTracing/renders/: gradient.ppm  sphere.ppm  world.ppm
RayTracing/src/: main.cpp  raytracing.hpp
RayTracing/src/Camera/: Camera.cpp  Camera.hpp
RayTracing/src/Color3/: Color3.cpp  Color3.hpp
RayTracing/src/Hittable/: Hittable.cpp  Hittable.hpp  Plane.cpp  Plane.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
RayTracing/src/HittableList/: HittableList.cpp  HittableList.hpp
RayTracing/src/Interval/: Interval.cpp  Interval.hpp
RayTracing/src/Material/: Dielectric.cpp  Dielectric.hpp  DiffuseLight.cpp  DiffuseLight.hpp  Lambertian.cpp  Lambertian.hpp  Material.cpp  Material.hpp  Metal.cpp  Metal.hpp
RayTracing/src/Ray3/: Ray3.cpp  Ray3.hpp
RayTracing/src/Timer/: Timer.cpp  Timer.hpp
RayTracing/src/Vec3/: Vec3.cpp  Vec3.hpp
